# cpp-miltech.hw

./: CMakeLists.txt  CMakePresets.json  README.md
data/: ammo.json  config.json
include/: DroneContext.hpp  DronePhysics.hpp  MissionProcessor.hpp  ThreadSafeQueue.hpp  Types.hpp
include/config/: ComponentFactory.hpp  FileConfigLoader.hpp
include/interfaces/: IBallisticSolver.hpp  IConfigLoader.hpp  IDroneState.hpp  ITargetProvider.hpp
include/providers/: JsonTargetProvider.hpp
include/solvers/: AnalyticalSolver.hpp  TableSolver.hpp
include/states/: StateAccelerating.hpp  StateDeclareting.hpp  StateMoving.hpp  StateStopped.hpp  StateTurning.hpp
src/: DronePhysics.cpp  MissionProcessor.cpp  main.cpp
src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
src/providers/: JsonTargetProvider.cpp
src/solvers/: AnalyticalSolver.cpp  TableSolver.cpp
src/states/: StateAccelerating.cpp  StateDeclareting.cpp  StateMoving.cpp  StateStopped.cpp  StateTurning.cpp
